# TextGraphics

./: .gitignore  CMakeLists.txt  LICENSE.md
assets/txt/: pistol.txt  test.txt  test2.txt
src/: ctexture.cpp  ctexture.hpp  graphics.cpp  graphics.hpp  main.cpp  texture.cpp  texture.hpp
